# home-server

./: .gitignore  Cargo.toml  LICENSE  README.md  deploy.sh  home-iot-mcu.code-workspace  reinit.sh
deploy_configs/: home-server.service  iot.conf  mosquitto.conf  redis.conf
frontend/: Cargo.toml  Trunk.toml  deploy.ps1  index.css  index.html  serve.ps1
frontend/src/: ace.rs  auth.rs  helpers.rs  main.rs  models.rs
frontend/src/controls/: admin.rs  atticfan.rs  mod.rs
frontend/src/controls/thermostat/: cmd_override.rs  history.rs  mod.rs  oneshot_setpoint.rs  temp_display.rs
frontend/src/tabs/: mod.rs
frontend/src/tabs/admin/: mod.rs
frontend/src/tabs/data/: mod.rs
frontend/src/tabs/hvac/: mod.rs  mode.rs
frontend/src/tabs/hvac/rules/: mod.rs  viewer.rs
frontend/src/tabs/quick/: mod.rs
models/: Cargo.toml
models/src/: hvac_request.rs  lib.rs  mixer.rs  thermostatd.rs  timed_rule.rs
models/src/set_point/: basic.rs  gradient.rs  mod.rs
src/: error.rs  helpers.rs  lib.rs  redis.rs
src/api/: atticfan.rs  auth.rs  mod.rs
src/api/thermostat/: lua.rs  mod.rs  oneshot_setpoint.rs  probes.rs  pulse_override.rs  rules.rs
src/hvac/: mod.rs  probe.rs
src/hvac/mixer/: lua_controller.rs  mod.rs  oneshot_setpoint.rs  override_pulse.rs  timed_rule.rs
src/hvac/mixer/set_point/: basic.rs  gradient.rs  mod.rs
src/mqtt/: handler.rs  mod.rs
thermostatd/: Cargo.toml
thermostatd/src/: default_script.lua  main.rs  mqtt.rs  scripting.rs
